samples/_failures_safe/1761438706_7445a9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_616a4f34.c: In function ‘parser_init’:
./samples/SAFE/__tmp_616a4f34.c:151:11: error: ‘struct Parser’ has no member named ‘has’
  151 |     parser->has
      |           ^~
./samples/SAFE/__tmp_616a4f34.c:151:16: error: expected ‘;’ at end of input
  151 |     parser->has
      |                ^
      |                ;
./samples/SAFE/__tmp_616a4f34.c:151:5: error: expected declaration or statement at end of input
  151 |     parser->has
      |     ^~~~~~
